src/objects/Eval_Value__c.object
<CustomObject>
    <description>Values of the fields defined in the Eval Object</description>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eval_Record_Number__c</fullName>
        <label>Eval Record Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Value_Record_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Eval Value Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Eval__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Eval</label>
        <referenceTo>Eval__c</referenceTo>
        <relationshipName>EvalValues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_No_Decimal__c</fullName>
        <label>Number No Decimal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Over_250__c</fullName>
        <label>Text Over 250</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Under_250__c</fullName>
        <label>Text Under 250</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_ID_Object__c</fullName>
        <label>What ID Object</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_ID__c</fullName>
        <label>What ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Eval Value</label>
    <nameField>
        <label>EvalValues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eval Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>